--- a/app/static/templates/base.html
+++ b/app/static/templates/base.html
@@ -27,10 +27,11 @@
     </div>
 </nav>
 <div class="container mt-3">
+
     {% if messages %}
-    {% for message in messages %}
-    <div class="alert alert-info">{{ message }}</div>
-    {% endfor %}
+        {% for message in messages %}
+        <div class="alert alert-{{ message['status'] }}">{{ message['text'] }}</div>
+        {% endfor %}
     {% endif %}
 
     {% block content %}
