--- a/app/static/templates/base.html
+++ b/app/static/templates/base.html
@@ -19,7 +19,16 @@
 <body>
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container">
-        <a class="navbar-brand" href="{{ url_for('index') }}">YouVi</a>
+        <a class="navbar-brand px-3 py-2 rounded text-white d-inline-flex align-items-center gap-2"
+           href="{{ url_for('index') }}"
+           style="background-color: rgb(35, 39, 43); border-radius: 5px;">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                 class="bi bi-airplane-fill" viewBox="0 0 16 16">
+                <path d="M6.428 1.151C6.708.591 7.213 0 8 0s1.292.592 1.572 1.151C9.861 1.73 10 2.431 10 3v3.691l5.17 2.585a1.5 1.5 0 0 1 .83 1.342V12a.5.5 0 0 1-.582.493l-5.507-.918-.375 2.253 1.318 1.318A.5.5 0 0 1 10.5 16h-5a.5.5 0 0 1-.354-.854l1.319-1.318-.376-2.253-5.507.918A.5.5 0 0 1 0 12v-1.382a1.5 1.5 0 0 1 .83-1.342L6 6.691V3c0-.568.14-1.271.428-1.849"/>
+            </svg>
+            Get-Tube
+        </a>
+
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -29,13 +38,33 @@
 <div class="container mt-3">
 
     {% if messages %}
-        {% for message in messages %}
-        <div class="alert alert-{{ message['status'] }}">{{ message['text'] }}</div>
-        {% endfor %}
+    {% for message in messages %}
+    <div class="alert alert-{{ message['status'] }}">{{ message['text'] }}</div>
+    {% endfor %}
     {% endif %}
 
     {% block content %}
     {% endblock %}
+
+    <footer class="py-3 my-4">
+        <div class="container">
+            <hr class="border-secondary opacity-75 mb-3" style="margin: 0 auto; width: 80%;">
+
+            <div class="d-flex flex-column flex-sm-row justify-content-center align-items-center gap-3">
+                <p class="mb-0 text-body-secondary text-center">rod.project@ya.ru</p>
+
+                <a href="https://t.me/mr_dagestan" class="text-decoration-none" aria-label="Telegram">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#0088cc"
+                         class="bi bi-telegram" viewBox="0 0 16 16">
+                        <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0M8.287 5.906q-1.168.486-4.666 2.01-.567.225-.595.442c-.03.243.275.339.69.47l.175.055c.408.133.958.288 1.243.294q.39.01.868-.32 3.269-2.206 3.374-2.23c.05-.012.12-.026.166.016s.042.12.037.141c-.03.129-1.227 1.241-1.846 1.817-.193.18-.33.307-.358.336a8 8 0 0 1-.188.186c-.38.366-.664.64.015 1.088.327.216.589.393.85.571.284.194.568.387.936.629q.14.092.27.187c.331.236.63.448.997.414.214-.02.435-.22.547-.82.265-1.417.786-4.486.906-5.751a1.4 1.4 0 0 0-.013-.315.34.34 0 0 0-.114-.217.53.53 0 0 0-.31-.093c-.3.005-.763.166-2.984 1.09"/>
+                    </svg>
+                </a>
+
+                <a href="/support/help" class="text-decoration-none">Спасти разработчика от голода</a>
+            </div>
+        </div>
+    </footer>
+
 </div>
 <script
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
