--- a/app/static/templates/base.html
+++ b/app/static/templates/base.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     {% if title %}
-    <title>{{ title }} - You-vi</title>
+    <title>{{ title }} - YouTubick</title>
     {% else %}
-    <title>Добро пожаловать в You-vi</title>
+    <title>Добро пожаловать в YouTubick</title>
     {% endif %}
     <link
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
@@ -21,12 +21,7 @@
     <div class="container">
         <a class="navbar-brand px-3 py-2 rounded text-white d-inline-flex align-items-center gap-2"
            href="{{ url_for('index') }}"
-           style="background-color: rgb(35, 39, 43); border-radius: 5px;">
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                 class="bi bi-airplane-fill" viewBox="0 0 16 16">
-                <path d="M6.428 1.151C6.708.591 7.213 0 8 0s1.292.592 1.572 1.151C9.861 1.73 10 2.431 10 3v3.691l5.17 2.585a1.5 1.5 0 0 1 .83 1.342V12a.5.5 0 0 1-.582.493l-5.507-.918-.375 2.253 1.318 1.318A.5.5 0 0 1 10.5 16h-5a.5.5 0 0 1-.354-.854l1.319-1.318-.376-2.253-5.507.918A.5.5 0 0 1 0 12v-1.382a1.5 1.5 0 0 1 .83-1.342L6 6.691V3c0-.568.14-1.271.428-1.849"/>
-            </svg>
-            Get-Tube
+           style="background-color: rgb(35, 39, 43); border-radius: 5px;">YouTubick
         </a>
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
