--- a/app/static/templates/index.html
+++ b/app/static/templates/index.html
@@ -2,12 +2,13 @@
 {% import "bootstrap_wtf.html" as wtf %}
 
 {% block content %}
-<main class="container py-4" style="background-color: rgb(38, 42, 46); border-radius: 1.5em;">
+<main class="container py-4 rounded-4 bg-body-secondary">
     <div class="container py-5">
         <div class="row justify-content-center">
             <div class="col-12 col-md-8 col-lg-6">
                 <h5 class="mb-3 text-primary text-center">Вставьте ссылку и выберите действие</h5>
                 <form id="downloadForm" method="POST" class="row g-3">
+
                     <div class="col-12">
                         <label for="url" class="form-label">Ссылка</label>
                         <input type="text" class="form-control" id="url" name="url" placeholder="https://youtube.com..."
@@ -16,15 +17,15 @@
                     </div>
 
                     <div class="col-12">
-                        <div class="form-check d-flex align-items-center gap-2 mb-2">
-                            <input id="download" name="action" type="radio" class="form-check-input" value="download"
-                                   checked required>
-                            <label class="form-check-label mb-0" for="download">Скачать</label>
-                        </div>
                         <div class="form-check d-flex align-items-center gap-2">
                             <input id="livePlay" name="action" type="radio" class="form-check-input" value="live_play"
-                                   required>
+                                   checked required>
                             <label class="form-check-label mb-0" for="livePlay">Смотреть LIVE</label>
+                        </div>
+                        <div class="form-check d-flex align-items-center gap-2 mb-2">
+                            <input id="download" name="action" type="radio" class="form-check-input" value="download"
+                                   required>
+                            <label class="form-check-label mb-0" for="download">Скачать</label>
                         </div>
                     </div>
 
@@ -54,7 +55,7 @@
         </div>
     </div>
 
-    <div class="mt-4 p-3 bg-dark rounded shadow-sm">
+    <div class="mt-4 p-3 bg-body-tertiary rounded shadow-sm">
         <h6 class="text-light">Как это работает?</h6>
         <p class="text-muted mb-0">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-1-circle"
