--- a/app/static/templates/base.html
+++ b/app/static/templates/base.html
@@ -10,7 +10,7 @@
             integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
             crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
-    <link rel="icon" href="{{ url_for('static', path='favicon.ico') }}">
+    <link rel="icon" href="https://youtubick.ru/static/favicon.ico">
 
 </head>
 <body>
