--- a/app/static/templates/base.html
+++ b/app/static/templates/base.html
@@ -3,16 +3,32 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>YouTubick</title>
+
+    <title>YouTubick - Смотрите видео с YouTube</title>
+    <meta name="robots" content="index, follow">
+    <meta name="description"
+          content="Смотрите видео с YouTube быстро и без рекламы с YouTubick. Просто вставьте ссылку и получите видео!">
+    <meta property="og:title" content="YouTubick - Смотреть видео с YouTube">
+    <meta property="og:description" content="Смотрите видео с YouTube по ссылке.">
+    <meta property="og:url" content="https://youtubick.ru">
+
+    {
+        "@context": "https://schema.org",
+        "@type": "WebSite",
+        "name": "YouTubick",
+        "url": "https://youtubick.ru",
+        "description": "Сервис для просмотра видео с YouTube"
+    }
+
     <link
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
             rel="stylesheet"
             integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
             crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
-    <link rel="icon" href="https://youtubick.ru/static/favicon.ico">
-
+    <link rel="icon" href="{{ url_for('static', path='favicon.ico') }}">
 </head>
+
 <body>
 <nav class="navbar navbar-expand-lg bg-body">
     <div class="container">
@@ -25,7 +41,7 @@
         </button>
     </div>
 </nav>
-<div class="container mt-3">
+<div class="container mt-1">
 
     {% if messages %}
     {% for message in messages %}
@@ -59,34 +75,8 @@
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous">
 </script>
-<script>
-    const themeToggleBtn = document.getElementById('themeToggle');
-    const themeIcon = document.getElementById('themeIcon');
-    const html = document.documentElement;
-
-    function applyTheme(theme) {
-        html.setAttribute('data-bs-theme', theme);
-        localStorage.setItem('theme', theme);
-        if (theme === 'dark') {
-            themeIcon.className = 'bi bi-sun';
-        } else {
-            themeIcon.className = 'bi bi-moon';
-        }
-    }
-
-    // Инициализация из localStorage
-    const savedTheme = localStorage.getItem('theme');
-    if (savedTheme) {
-        applyTheme(savedTheme);
-    } else {
-        applyTheme('light'); // дефолтная тема
-    }
-
-    themeToggleBtn.addEventListener('click', () => {
-        const currentTheme = html.getAttribute('data-bs-theme');
-        const newTheme = currentTheme === 'dark' ? 'light' : 'dark';
-        applyTheme(newTheme);
-    });
-</script>
+<script src="{{ url_for('static', path='js/scheme_button.js') }}"></script>
+{% block scripts %}
+{% endblock %}
 </body>
 </html>
