--- a/app/static/templates/help_support.html
+++ b/app/static/templates/help_support.html
@@ -29,25 +29,8 @@
     </div>
 </main>
 
-<script>
-    document.addEventListener('DOMContentLoaded', function() {
-        // Копирование адресов
-        const copyButtons = document.querySelectorAll('.copy-btn');
-        copyButtons.forEach(button => {
-            button.addEventListener('click', function() {
-                const input = this.parentElement.querySelector('.copy-input');
-                input.select();
-                document.execCommand('copy');
+{% block scripts %}
+<script src="{{ url_for('static', path='js/copy.js') }}"></script>
+{% endblock %}
 
-                // Временная смена текста кнопки
-                const originalText = this.innerHTML;
-                this.innerHTML = '<i class="bi bi-check"></i> Скопировано!';
-
-                setTimeout(() => {
-                    this.innerHTML = originalText;
-                }, 2000);
-            });
-        });
-    });
-</script>
 {% endblock %}
