--- a/app/static/templates/index.html
+++ b/app/static/templates/index.html
@@ -2,16 +2,16 @@
 {% import "bootstrap_wtf.html" as wtf %}
 
 {% block content %}
-<main class="container py-4 rounded-4 bg-body-secondary">
+<main class="container py-2 rounded-4 bg-body-tertiary">
     <div class="row justify-content-center">
         <div class="col-12 col-md-8 col-lg-6">
             <form id="downloadForm" method="POST" class="row g-3">
                 <div class="col-12">
                     <label for="url" class="form-label">Ссылка</label>
                     <div class="input-group">
-                        <input type="text" class="form-control" id="url" name="url"
+                        <input type="text" class="form-control rounded-3" id="url" name="url"
                                placeholder="https://youtube.com..." required>
-                        <button class="btn btn-primary" type="submit" id="submitBtn">Погнали</button>
+                        <button class="btn btn-primary rounded-3 mx-1" type="submit" id="submitBtn">Смотреть</button>
                     </div>
                     <div class="invalid-feedback">Пожалуйста, введите ссылку.</div>
                 </div>
@@ -20,12 +20,12 @@
         </div>
     </div>
 
-    <div class="row justify-content-center mt-5">
-        <div id="videoBlock" class="col-12 col-md-10 col-lg-8 d-none">
+    <div class="row justify-content-center mt-2">
+        <div id="videoBlock" class="col-12 col-md-12 col-lg-10 d-none">
             <h4 class="mb-3 text-primary text-center">Видео</h4>
-            <div class="card p-3">
+            <div class="card p-0 rounded-4">
                 <div class="ratio ratio-16x9">
-                    <video id="videoPlayer" class="w-100" controls preload="metadata">
+                    <video id="videoPlayer" class="w-100 rounded-4" controls preload="metadata">
                         <source id="videoSource" src="" type="video/mp4">
                         Ваш браузер не поддерживает воспроизведение видео.
                     </video>
@@ -34,67 +34,27 @@
         </div>
     </div>
 
-    <div class="mt-4 p-3 bg-body-tertiary rounded shadow-sm">
-        <h6 class="text-light">Как это работает?</h6>
+    <div class="mt-4 mb-2 p-3 bg-body rounded-4 shadow-sm">
+        <h6>Как смотреть видео?</h6>
         <p class="text-muted mb-0">
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-1-circle"
-                 viewBox="0 0 16 16">
-                <path d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8m15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0M9.283 4.002V12H7.971V5.338h-.065L6.072 6.656V5.385l1.899-1.383z"/>
-            </svg>
             Скопируйте ссылку на видео прямо с YouTube (поделиться видео, скопировать) или из браузера
             (скопировать адрес ссылки)
         </p>
 
         <p class="text-muted mb-0">
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-2-circle"
-                 viewBox="0 0 16 16">
-                <path d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8m15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0M6.646 6.24v.07H5.375v-.064c0-1.213.879-2.402 2.637-2.402 1.582 0 2.613.949 2.613 2.215 0 1.002-.6 1.667-1.287 2.43l-.096.107-1.974 2.22v.077h3.498V12H5.422v-.832l2.97-3.293c.434-.475.903-1.008.903-1.705 0-.744-.557-1.236-1.313-1.236-.843 0-1.336.615-1.336 1.306"/>
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                 class="bi bi-exclamation-diamond" viewBox="0 0 16 16">
+                <path d="M6.95.435c.58-.58 1.52-.58 2.1 0l6.515 6.516c.58.58.58 1.519 0 2.098L9.05 15.565c-.58.58-1.519.58-2.098 0L.435 9.05a1.48 1.48 0 0 1 0-2.098zm1.4.7a.495.495 0 0 0-.7 0L1.134 7.65a.495.495 0 0 0 0 .7l6.516 6.516a.495.495 0 0 0 .7 0l6.516-6.516a.495.495 0 0 0 0-.7L8.35 1.134z"/>
+                <path d="M7.002 11a1 1 0 1 1 2 0 1 1 0 0 1-2 0M7.1 4.995a.905.905 0 1 1 1.8 0l-.35 3.507a.552.552 0 0 1-1.1 0z"/>
             </svg>
-            Вставьте ссылку в форму, выберите действие и нажмите <b>Погнали</b>.
+            Недоступны видео с пометкой 18+
+            <br>
+            Видео 360, но быстро и без рекламы. Возможны баги с перемоткой, но вы никому не докажете.
         </p>
-        <br>
     </div>
 </main>
-
-<script>
-    document.addEventListener("DOMContentLoaded", () => {
-        const form = document.getElementById("downloadForm");
-
-        form.addEventListener("submit", async function(e) {
-            e.preventDefault();
-
-            try {
-                const formData = new FormData(form);
-                const urlValue = formData.get("url");
-
-                const validationResponse = await fetch(`/validate_url?url=${encodeURIComponent(urlValue)}`);
-                if (!validationResponse.ok) {
-                    alert("Ошибка: некорректная ссылка на видео");
-                    return;
-                }
-
-                const response = await fetch(`/live_play?url=${encodeURIComponent(urlValue)}`);
-                const data = await response.json();
-
-                if (data.stream_url) {
-                    const block = document.getElementById("videoBlock");
-                    const player = document.getElementById("videoPlayer");
-                    const source = document.getElementById("videoSource");
-
-                    source.src = `/stream?stream_url=${encodeURIComponent(data.stream_url)}`;
-                    player.load();
-                    block.classList.remove("d-none");
-                    player.play();
-                } else {
-                    alert("Не удалось получить прямой поток.");
-                }
-            } catch (err) {
-                console.error("Ошибка:", err);
-                alert("Произошла ошибка, напишите нам на почту что произошло");
-            }
-        });
-    });
-</script>
-
+{% block scripts %}
+<script src="{{ url_for('static', path='js/main.js') }}"></script>
+{% endblock %}
 
 {% endblock %}
