--- a/app/static/templates/base.html
+++ b/app/static/templates/base.html
@@ -11,7 +11,7 @@
     <meta property="og:title" content="YouTubick - Смотреть видео с YouTube">
     <meta property="og:description" content="Смотрите видео с YouTube по ссылке.">
     <meta property="og:url" content="https://youtubick.ru">
-
+    <script type="application/ld+json">
     {
         "@context": "https://schema.org",
         "@type": "WebSite",
@@ -19,7 +19,7 @@
         "url": "https://youtubick.ru",
         "description": "Сервис для просмотра видео с YouTube"
     }
-
+    </script>
     <link
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
             rel="stylesheet"
